initial restructure (working)

--- a/a02/Makefile
+++ b/a02/Makefile
@@ -1,4 +1,14 @@
-output: tokenizer.cpp
-	g++ -o tokenizer -g tokenizer.cpp -lreadline
+CC = G++
+
+mush: driver.o
+	${CC} -g -o mush driver.o command.o tokenizer.o -lreadline
+driver.o: driver.cpp command.o tokenizer.o
+	${CC} -g -c driver.cpp -lreadline
+
+command.o: command.cpp
+	${CC} -g -c command.cpp
+
+tokenizer.o: tokenizer.cpp
+	${CC} -g -c tokenizer.cpp -lreadline
 clean:
-	rm tokenizer
+	rm *.o mush
