Removed unsued import

--- a/a02/Makefile
+++ b/a02/Makefile
@@ -3,12 +3,12 @@ CC = G++
 mush: driver.o
 	${CC} -g -o mush driver.o command.o tokenizer.o -lreadline
 driver.o: driver.cpp command.o tokenizer.o
-	${CC} -g -c driver.cpp -lreadline
+	${CC} -g -c driver.cpp
 
-command.o: command.cpp
+command.o: command.cpp command.h
 	${CC} -g -c command.cpp
 
-tokenizer.o: tokenizer.cpp
-	${CC} -g -c tokenizer.cpp -lreadline
+tokenizer.o: tokenizer.cpp tokenizer.h
+	${CC} -g -c tokenizer.cpp
 clean:
 	rm *.o mush
