--- a/a03_threads/Makefile
+++ b/a03_threads/Makefile
@@ -1,13 +1,6 @@
 CC = gcc
 
-main: thread_demo.o worker.o
-	${CC} -o thread_demo  thread_demo.o worker.o
-
-thread_demo.o: thread_demo.c
-	${CC} -c thread_demo.c
-
-worker.o: worker.c
-	${CC} -o worker.c
-
+thread_demo: thread_demo.c worker.c
+	${CC} -o thread_demo  thread_demo.c worker.c
 clean:
-	rm mush
+	rm thread_demo
