modified to work on edoras's gcc version

--- a/a03_threads/Makefile
+++ b/a03_threads/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 
 thread_demo: thread_demo.c worker.c
-	${CC} -o thread_demo  thread_demo.c worker.c
+	${CC} -pthread -o thread_demo  thread_demo.c worker.c
 clean:
 	rm thread_demo
