taking a break push commit

--- a/a03/Makefile
+++ b/a03/Makefile
@@ -1,6 +1,16 @@
 CC = g++
+DATA_STRUCTURES = page_table.o level.o map.o
+BYU = byu.o
 
-pagetable: driver.cpp
-	${CC} -g -o pagetable driver.cpp
+pagetable: driver.cpp ${DATA_STRUCTURES} ${BYU}
+	${CC} -g -o pagetable driver.cpp page_table.o level.o map.o byu.o
+byu.o: byu_tracereader.c byutr.h
+	${CC} -w -o byu.o -c byu_tracereader.c
+page_table.o: page_table.cpp page_table.h
+	${CC} -c page_table.cpp
+level.o: level.cpp level.h
+	${CC} -c level.cpp
+map.o: map.cpp map.h
+	${CC} -c map.cpp
 clean:
 	rm *.o pagetable
