--- a/a05/Makefile
+++ b/a05/Makefile
@@ -1,7 +1,7 @@
 CC = g++ -std=c++11
 
-mizzo: driver.cpp 
+mizzo: driver.cpp driver.h
 	${CC} -g -o mizzo driver.cpp -lpthread -lrt
 
 clean:
-	rm *.o mizzo
+	rm mizzo
