--- a/a05/Makefile
+++ b/a05/Makefile
@@ -1,11 +1,11 @@
 CC = g++ -std=c++11
 
-mizzo: driver.cpp driver.h producer.o consumer.o
+mizzo: driver.cpp driver.h args.h producer.o consumer.o
 	${CC} -g -o mizzo driver.cpp producer.o consumer.o -lpthread -lrt
 
-producer: producer.cpp producer.h
+producer: producer.cpp producer.h args.h
 	${CC} -c producer.cpp
-consumer: consumer.cpp consumer.h
+consumer: consumer.cpp consumer.h args.h
 	${CC} -c consumer.cpp
 
 clean:
